--- a/studying_pandas.ipynb
+++ b/studying_pandas.ipynb
@@ -4173,7 +4173,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(('bar', 'one'),                 C        D\n",
+      "A   B                     \n",
+      "bar one  0.842366 -1.42695)\n",
+      "(('bar', 'three'),                   C         D\n",
+      "A   B                        \n",
+      "bar three -0.979027 -0.303423)\n",
+      "(('bar', 'two'),                 C         D\n",
+      "A   B                      \n",
+      "bar two  1.197933 -0.251896)\n",
+      "(('foo', 'one'),                 C         D\n",
+      "A   B                      \n",
+      "foo one  0.846447 -0.536967\n",
+      "    one  0.840301 -1.088913)\n",
+      "(('foo', 'three'),                   C         D\n",
+      "A   B                        \n",
+      "foo three  1.352814  0.063664)\n",
+      "(('foo', 'two'),                 C         D\n",
+      "A   B                      \n",
+      "foo two  0.859428  0.465420\n",
+      "    two  1.547825  1.530492)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# my suggested code\n",
+    "\n",
+    "for i in df.groupby(['A', 'B']):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -4181,25 +4220,76 @@
      "output_type": "stream",
      "text": [
       "('bar', 'one')\n",
-      "     A    B         C        D\n",
-      "1  bar  one  0.842366 -1.42695\n",
+      "                C        D\n",
+      "A   B                     \n",
+      "bar one  0.842366 -1.42695\n",
       "('bar', 'three')\n",
-      "     A      B         C         D\n",
-      "3  bar  three -0.979027 -0.303423\n",
+      "                  C         D\n",
+      "A   B                        \n",
+      "bar three -0.979027 -0.303423\n",
       "('bar', 'two')\n",
-      "     A    B         C         D\n",
-      "5  bar  two  1.197933 -0.251896\n",
+      "                C         D\n",
+      "A   B                      \n",
+      "bar two  1.197933 -0.251896\n",
       "('foo', 'one')\n",
-      "     A    B         C         D\n",
-      "0  foo  one  0.846447 -0.536967\n",
-      "6  foo  one  0.840301 -1.088913\n",
+      "                C         D\n",
+      "A   B                      \n",
+      "foo one  0.846447 -0.536967\n",
+      "    one  0.840301 -1.088913\n",
       "('foo', 'three')\n",
-      "     A      B         C         D\n",
-      "7  foo  three  1.352814  0.063664\n",
+      "                  C         D\n",
+      "A   B                        \n",
+      "foo three  1.352814  0.063664\n",
       "('foo', 'two')\n",
-      "     A    B         C         D\n",
-      "2  foo  two  0.859428  0.465420\n",
-      "4  foo  two  1.547825  1.530492\n"
+      "                C         D\n",
+      "A   B                      \n",
+      "foo two  0.859428  0.465420\n",
+      "    two  1.547825  1.530492\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We can iterate over groups and print the group name and group data as follows:\n",
+    "for i, group  in df.groupby(['A', 'B']):\n",
+    "    print(i)\n",
+    "    print(group) # qn ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('bar', 'one')\n",
+      "                C        D\n",
+      "A   B                     \n",
+      "bar one  0.842366 -1.42695\n",
+      "('bar', 'three')\n",
+      "                  C         D\n",
+      "A   B                        \n",
+      "bar three -0.979027 -0.303423\n",
+      "('bar', 'two')\n",
+      "                C         D\n",
+      "A   B                      \n",
+      "bar two  1.197933 -0.251896\n",
+      "('foo', 'one')\n",
+      "                C         D\n",
+      "A   B                      \n",
+      "foo one  0.846447 -0.536967\n",
+      "    one  0.840301 -1.088913\n",
+      "('foo', 'three')\n",
+      "                  C         D\n",
+      "A   B                        \n",
+      "foo three  1.352814  0.063664\n",
+      "('foo', 'two')\n",
+      "                C         D\n",
+      "A   B                      \n",
+      "foo two  0.859428  0.465420\n",
+      "    two  1.547825  1.530492\n"
      ]
     }
    ],
@@ -4208,6 +4298,26 @@
     "for (key1, key2), group in df.groupby(['A', 'B']):\n",
     "    print((key1, key2))\n",
     "    print(group) # qn ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{('bar', 'one'): [1], ('bar', 'three'): [3], ('bar', 'two'): [5], ('foo', 'one'): [0, 6], ('foo', 'three'): [7], ('foo', 'two'): [2, 4]}"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grouped_df.groups"
    ]
   },
   {
@@ -4650,6 +4760,440 @@
     "# Now we can group by one or both levels:\n",
     "df.groupby(level=['A', 'B']).count()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Selecting a row or column\n",
+    "\n",
+    "In the example above, when we grouped the DataFrame by 2 keys and calculated the average values for each of the group, the resulting DataFrame is a MultiIndex object. Let's quickly review how we can operate with this data.\n",
+    "\n",
+    "Here is the DataFrame we had:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">bar</th>\n",
+       "      <th>one</th>\n",
+       "      <td>0.842366</td>\n",
+       "      <td>-1.426950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>three</th>\n",
+       "      <td>-0.979027</td>\n",
+       "      <td>-0.303423</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>two</th>\n",
+       "      <td>1.197933</td>\n",
+       "      <td>-0.251896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">foo</th>\n",
+       "      <th>one</th>\n",
+       "      <td>0.843374</td>\n",
+       "      <td>-0.812940</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>three</th>\n",
+       "      <td>1.352814</td>\n",
+       "      <td>0.063664</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>two</th>\n",
+       "      <td>1.203627</td>\n",
+       "      <td>0.997956</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  C         D\n",
+       "A   B                        \n",
+       "bar one    0.842366 -1.426950\n",
+       "    three -0.979027 -0.303423\n",
+       "    two    1.197933 -0.251896\n",
+       "foo one    0.843374 -0.812940\n",
+       "    three  1.352814  0.063664\n",
+       "    two    1.203627  0.997956"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_means = grouped_df.mean()\n",
+    "\n",
+    "df_means"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MultiIndex([('bar',   'one'),\n",
+       "            ('bar', 'three'),\n",
+       "            ('bar',   'two'),\n",
+       "            ('foo',   'one'),\n",
+       "            ('foo', 'three'),\n",
+       "            ('foo',   'two')],\n",
+       "           names=['A', 'B'])"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_means.index"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How do we access data in MultiIndex DataFrames? Let's review. If we need to select only one subgroup of data, for example, bar or C, we can do it as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A    B    \n",
+       "bar  one      0.842366\n",
+       "     three   -0.979027\n",
+       "     two      1.197933\n",
+       "foo  one      0.843374\n",
+       "     three    1.352814\n",
+       "     two      1.203627\n",
+       "Name: C, dtype: float64"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Select column 'C'\n",
+    "df_means['C']\n",
+    "\n",
+    "# When we select column 'C' , we get back a Series with the same MultiIndex as the original DataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>one</th>\n",
+       "      <td>0.842366</td>\n",
+       "      <td>-1.426950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>three</th>\n",
+       "      <td>-0.979027</td>\n",
+       "      <td>-0.303423</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>two</th>\n",
+       "      <td>1.197933</td>\n",
+       "      <td>-0.251896</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              C         D\n",
+       "B                        \n",
+       "one    0.842366 -1.426950\n",
+       "three -0.979027 -0.303423\n",
+       "two    1.197933 -0.251896"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_means.loc['bar']\n",
+    "\n",
+    "# When we select a group of rows with the 'bar' index, we get back a DataFrame which has a single-level index."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# stack( ) and unstack( )\n",
+    "\n",
+    "Pandas has two functions for reshaping the DataFrame and changing the index: stack() and unstack(). The stack() function \"compresses\" a level in the DataFrame's columns to produce either:\n",
+    "\n",
+    "A Series, in the case of a simple column Index.\n",
+    "A DataFrame, in the case of MultiIndex columns.\n",
+    "If the columns have a MultiIndex, we can choose which level to stack. The stacked level becomes the new lowest level in a MultiIndex on the columns. \n",
+    "\n",
+    "Let's take the `DataFrame` `df_means` and demonstrate:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">bar</th>\n",
+       "      <th>one</th>\n",
+       "      <td>0.842366</td>\n",
+       "      <td>-1.426950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>three</th>\n",
+       "      <td>-0.979027</td>\n",
+       "      <td>-0.303423</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>two</th>\n",
+       "      <td>1.197933</td>\n",
+       "      <td>-0.251896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">foo</th>\n",
+       "      <th>one</th>\n",
+       "      <td>0.843374</td>\n",
+       "      <td>-0.812940</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>three</th>\n",
+       "      <td>1.352814</td>\n",
+       "      <td>0.063664</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>two</th>\n",
+       "      <td>1.203627</td>\n",
+       "      <td>0.997956</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  C         D\n",
+       "A   B                        \n",
+       "bar one    0.842366 -1.426950\n",
+       "    three -0.979027 -0.303423\n",
+       "    two    1.197933 -0.251896\n",
+       "foo one    0.843374 -0.812940\n",
+       "    three  1.352814  0.063664\n",
+       "    two    1.203627  0.997956"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_means"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A    B       \n",
+       "bar  one    C    0.842366\n",
+       "            D   -1.426950\n",
+       "     three  C   -0.979027\n",
+       "            D   -0.303423\n",
+       "     two    C    1.197933\n",
+       "            D   -0.251896\n",
+       "foo  one    C    0.843374\n",
+       "            D   -0.812940\n",
+       "     three  C    1.352814\n",
+       "            D    0.063664\n",
+       "     two    C    1.203627\n",
+       "            D    0.997956\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_stacked = df_means.stack() # Stack the prescribed level(s) from columns to index.\n",
+    "\n",
+    "df_stacked"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MultiIndex([('bar',   'one', 'C'),\n",
+       "            ('bar',   'one', 'D'),\n",
+       "            ('bar', 'three', 'C'),\n",
+       "            ('bar', 'three', 'D'),\n",
+       "            ('bar',   'two', 'C'),\n",
+       "            ('bar',   'two', 'D'),\n",
+       "            ('foo',   'one', 'C'),\n",
+       "            ('foo',   'one', 'D'),\n",
+       "            ('foo', 'three', 'C'),\n",
+       "            ('foo', 'three', 'D'),\n",
+       "            ('foo',   'two', 'C'),\n",
+       "            ('foo',   'two', 'D')],\n",
+       "           names=['A', 'B', None])"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_stacked.index\n",
+    "\n",
+    "# The None value in the names parameter of the MultiIndex indicates that the level doesn't have a name assigned to it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
